style: fix div spacing on Card Modals

--- a/client/src/stylesheets/game/modals/CardModal.scss
+++ b/client/src/stylesheets/game/modals/CardModal.scss
@@ -1,8 +1,8 @@
 .card-modal {
   border: 0.125rem solid $light-shade;
   background-color: $dark-shade;
-  width: 35vw;
-  height: 30vh;
+  width: 40rem;
+  height: 17rem;
 }
 
 .title-wrapper {
